// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          lead
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. two child elements 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          lead
        </div>
      </div>
      <div />
      <div>
        <div>
          <div>
            support-1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`3. three child elements 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          lead
        </div>
      </div>
      <div />
      <div>
        <div>
          <div>
            support-1
          </div>
        </div>
        <div>
          <div>
            support-2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
